tests/Houtamelo.Spire.Analyzers.Tests/SPIRE008/cases/Detect_RecordStruct.cs
//@ should_fail
// Ensure that SPIRE008 IS triggered when target is a [EnforceInitialization] record struct.
class Detect_RecordStruct
{
    void Method()
    {
        var obj = RuntimeHelpers.GetUninitializedObject(typeof(EnforceInitializationRecordStruct)); //~ ERROR
    }
}
